test/resource/invalid/ast.ftl
<#outputFormat>
  <#noAutoEsc "test">
    <#autoEsc "test">
